# deepfellow-infra

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE.md  README.md  RELEASE.md  compose.yaml  deepfellow-infra.code-workspace  example.env  install_on_remote.md  justfile  pyproject.toml
.claude/skills/check/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: build-dev.yml  build-prod.yml  deploy-dev.yml  tag.yml
.gitlab/issue_templates/: bug.md  feature.md  feature_request.md
.gitlab/merge_request_templates/: bug.md  default.md  feature.md  release.md
openspec/: config.yaml
scripts/: check_license_header.py  copy_envs.py  custom_models.json  extra_models.json  get_huggingface_models.py  get_ollama_models.py  healthcheck.py
server/: applicationcontext.py  config.py  coqui.py  dependecies.py  dfi.sh  docker.py  endpointregistry.py  ffmpeg.py  lifecycle.py  llamacpp.py  main.py  metrics.py  metrics_registry.py  model_tester.py  ocr.py  ollama.py  portservice.py  serviceprovider.py  services_manager.py  stable_diffusion.py  task_manager.py  utils.py  vllm.py
server/api/: config.py  fallback.py  mesh.py  metrics.py  models.py  openai.py  services.py  settings.py  utils.py
server/core/: dependencies.py
server/models/: api.py  common.py  config.py  mesh.py  models.py  services.py
server/scripts/: auth_graph.py  check_auth.py
server/services/: base2_service.py  base_service.py  claude_service.py  coqui_service.py  custom_service.py  googleai_service.py  llamacpp_service.py  llamapcpp_service.py  mcp_service.py  ollama_external_service.py  ollama_service.py  openai_service.py  remote_service.py  rerank_service.py  sindri_service.py  speaches_ai_service.py  speches_ai_service.py  stable_diffusion_service.py  vllm_service.py
server/services/automatic1/: index.py
server/services/bento_ml_example/: index.py
server/services/bielik/: index.py
server/services/deepseek/: index.py
server/services/easyocr/: index.py
server/services/gemma3-1b/: index.py
server/services/hermes/: index.py
server/services/llama3.1-8b/: index.py
server/services/mistral/: index.py
server/services/pllum/: index.py
server/services/speaches-ai/: index.py
server/services/tts/: index.py
server/utils/: __init__.py  core.py  exceptions.py  files.py  hardware.py  json_rpc_client.py  json_rpc_server.py  loading.py  logger.py  logging_config.yaml  model_downloader.py  ollama.py  size_fetcher.py  tracing.py  validators.py  vram_calculator.py
server/websockets/: api.py  dependencies.py  exceptions.py  infra_client.py  infra_websocket_server.py  loadbalancer.py  manager.py  models.py  parent_infra.py  parent_infra_group.py  subinfra.py  usage_manager.py  utils.py  websocket_client.py  websocket_server.py
static/: convert-ollama.js  index.html  ollama-min.json  ollama.json  script.js  style.css  vllm-min.json
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_docker.py  test_lifecycle.py  test_utils.py
tests/unit/scripts/: test_check_license_header.py  test_copy_envs.py  test_get_huggingface_models.py  test_get_ollama_models.py  test_healthcheck.py
tests/unit/server/: fakes.py  test_api_models.py  test_applicationcontext.py  test_endpointregistry.py  test_ffmpeg.py  test_llamacpp_service.py  test_metrics_registry.py  test_metrics_service.py  test_model_tester.py  test_ollama_service.py  test_portservice.py  test_serviceprovider.py  test_services_manager.py  test_services_remote_service.py  test_sevices_claude_service.py  test_task_manager.py  (+1 more)
webui/: .cta.json  .env.example  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
webui/public/: manifest.json
webui/src/: main.tsx  reportWebVitals.ts  routeTree.gen.ts  styles.css
(+137 files in other folders)
