[project]
name = "df-infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.112.1",
    "json-stream>=2.3.3",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tomlkit>=0.13.3",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.10.1",
    "websockets>=15.0.1",
    "aiofiles>=24.1.0",
    "py-cpuinfo>=9.0.0",
    "aiodocker>=0.24.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-coverage>=0.0",
    "pytest-dotenv>=0.5.2",
    "respx>=0.22.0",
    "ruff>=0.11.9",
    "freezegun>=1.5.2",
    "pyright>=1.1.407",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
line-length = 140
indent-width = 4
target-version = "py313"


[tool.ruff.lint]
ignore = [
    "ANN204", # No return type for __init__ method required
    "ISC001",
    "D101",   # No docstring for classes required
    "D106",   # No docstring for nested classes required
    "D107",   # No docstrings for __init__ method required
    "D203",
    "D213",
    "D301",
    "D413",
    "EM101",
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "TRY003",
]
select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "EM",  # flake8-errmsg
    "F",   # flake8
    "G",   # flake8-logging-format
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # ruff-specific rules
    "Q",   # flake8-quotes
    # "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "T10", # flake8-print
    "TCH", # flake8-type-checking
    "TRY", # tryceratops
    "UP",  # pyupgrade
]

fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "ARG"]
"__init__.py" = ["D"]


[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"local" = ["healing_tale"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
env_files = [".test.env"]
env_override_existing_values = true

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    'if __name__ == .__main__.:',
]

[tool.pyright]
include = ["server", "tests"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.13"
